--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "lint": "textlint ."
+    "lint": "textlint .",
+    "build:pdf": "md-to-pdf resume/README.md --config-file ./pdf-configs/config.js"
   },
   "author": "arinc0",
   "license": "ISC",
@@ -14,6 +15,7 @@
     "@textlint-ja/textlint-rule-no-dropping-i": "^2.0.1",
     "@textlint-ja/textlint-rule-no-insert-dropping-sa": "^2.0.1",
     "@textlint-rule/textlint-rule-no-unmatched-pair": "^2.0.2",
+    "md-to-pdf": "^5.2.4",
     "textlint": "^14.0.2",
     "textlint-filter-rule-comments": "^1.2.2",
     "textlint-rule-apostrophe": "^2.0.0",
